--- a/src/app/components/dashboard/finanzas/fondos/cuenta-bancaria/cuenta-bancaria.component.html
+++ b/src/app/components/dashboard/finanzas/fondos/cuenta-bancaria/cuenta-bancaria.component.html
@@ -9,7 +9,7 @@
         [loading]="loading" responsiveLayout="scroll">
         <ng-template pTemplate="caption">
             <div class="flex align-items-center justify-content-between">
-                TRASLADOS
+                CUENTAS
                 <p-button (click)="crearCuenta()" icon="pi pi-plus-circle"></p-button>
             </div>
         </ng-template>
