--- a/src/app/components/dashboard/ventas/creditos/cuentas-por-cobrar/cuentas-por-cobrar.component.html
+++ b/src/app/components/dashboard/ventas/creditos/cuentas-por-cobrar/cuentas-por-cobrar.component.html
@@ -4,24 +4,33 @@
     <p-toolbar>
         <div class="p-toolbar-group-left">     
             <p-autoComplete  [(ngModel)]="selectCliente" [suggestions]="clientes" (completeMethod)="filterClientes($event)" 
-            field="nombre" [dropdown]="true" [forceSelection]="true" (onSelect)="filterd()" class="mr-2">
+            field="nombre" [dropdown]="true" [forceSelection]="true" (onSelect)="filterd()" class="mr-2" 
+            [disabled]="cuentasPorCobrarService.form.get('dates')?.errors && cuentasPorCobrarService.form.get('checked')?.value">
                 <ng-template let-cliente pTemplate="item">
                 <div class="country-item">
                     <div>{{cliente.nombre}}</div>
                 </div>
                 </ng-template>
             </p-autoComplete>
-            <div class="mr-2" *appRole="['ADMIN']">
-                <p-checkbox class="mr-2" [(ngModel)]="checked" [binary]="true" inputId="binary"></p-checkbox>
-                <label for="binary" class="mr-2">Cuentas canceladas</label>
+            <div [formGroup]="cuentasPorCobrarService.form">
+                <div class="mr-2" *appRole="['ADMIN']">
+                    <p-checkbox class="mr-2" formControlName="checked" [binary]="true" inputId="binary" (onChange)="clean()"></p-checkbox>
+                    <label for="binary" class="mr-2">Cuentas canceladas</label>
+                </div>
+                <div >
+                        <!-- <p-calendar formControlName="dates"  selectionMode="range"  [readonlyInput]="true" [showIcon]="true" class="mr-2" *ngIf="checked"></p-calendar> -->
+                        <p-calendar selectionMode="range" [readonlyInput]="true" [showIcon]="true" *ngIf="cuentasPorCobrarService.form.get('checked')?.value"
+                        class="mr-2" formControlName="dates" dateFormat="dd/mm/yy"></p-calendar>        
+                </div>
             </div>
-            <p-calendar [(ngModel)]="fechas" selectionMode="range" [readonlyInput]="true" [showIcon]="true" class="mr-2" *ngIf="checked"></p-calendar>         
         </div>
         
         <div class="p-toolbar-group-right">
-            <button pButton pRipple label="Todos" class="p-button-success mr-2" (click)="getTodostCuentasPorCobrar()"></button>
+            <!-- [disabled]="cuentasPorCobrarService.form.get('dates')?.errors" -->
+            <button pButton pRipple label="Todos" class="p-button-success mr-2" [disabled]="cuentasPorCobrarService.form.get('dates')?.errors && cuentasPorCobrarService.form.get('checked')?.value"
+            (click)="getTodostCuentasPorCobrar()"></button>
             <button pButton pRipple label="Pago total" icon="pi pi-plus" class="p-button-success mr-2" (click)="pagoDialog()" 
-            [disabled]="!cuentasPorCobrarSeleccionadas || !cuentasPorCobrarSeleccionadas.length || checked" *appRole="['CAJERO']"></button>  
+            [disabled]="!cuentasPorCobrarSeleccionadas || !cuentasPorCobrarSeleccionadas.length || cuentasPorCobrarService.form.get('checked')?.value" *appRole="['CAJERO']"></button>  
         </div>
     </p-toolbar>
     <p-table #dt2 [value]="cuentasPorCobrar" dataKey="id"
@@ -60,7 +69,7 @@
                 <td>
                     <i class="pi" [ngClass]="{'true-icon pi-check-circle': cuentaPorCobrar.estado, 'false-icon pi-times-circle': !cuentaPorCobrar.estado}"></i>
                 </td>            
-                <td *appRole="['CAJERO']"><button pButton pRipple icon="pi pi-money-bill" class="p-button-rounded p-button-success mr-2" (click)="openPagoForm()" [disabled]="cuentaPorCobrar.estado"></button></td>
+                <td *appRole="['CAJERO']"><button pButton pRipple icon="pi pi-money-bill" class="p-button-rounded p-button-success mr-2" (click)="openPagoForm(cuentaPorCobrar)" [disabled]="cuentaPorCobrar.estado"></button></td>
                 <td *appRole="['CAJERO']">
                     <p-tableCheckbox [value]="cuentaPorCobrar" [disabled]="cuentaPorCobrar.estado"></p-tableCheckbox>
                 </td>
@@ -81,89 +90,7 @@
     </p-table>
 </div>
 
-
-<p-dialog [(visible)]="pagoDialogo"  header="Pago" [style]="{width: '700px'}" [modal]="true" styleClass="p-fluid" (onHide)="cerrar()">
-    <ng-template pTemplate="content">
-        
-        <div class="formgrid grid">
-            <div class="field col">
-                <label for="price">No. Factura</label>
-                <p-listbox [options]="cuentasPorCobrarSeleccionadas" optionLabel="ventaid" [style]="{'width':'15rem'}" [metaKeySelection]="false"></p-listbox>
-            </div>
-            <div class="field col">
-                <label for="price">Saldos</label>
-                <p-listbox [options]="cuentasPorCobrarSeleccionadas" optionLabel="saldo" [style]="{'width':'15rem'}" [metaKeySelection]="false">
-                    <ng-template let-credito pTemplate="item">
-                        <div class="country-item"> 
-                            <div>{{'Q ' + credito.saldo}}</div>
-                        </div>
-                    </ng-template>
-                </p-listbox>
-            </div>
-        </div>
-        <div class="formgrid grid">
-            <div class="field col">
-                <label for="price">Total Saldo</label>
-                <p-inputNumber id="price"  mode="currency" currency="GTQ" locale="es-GT" [readonly]="true" [(ngModel)]="monto" ></p-inputNumber>
-            </div>
-
-            <p-panel header="COBRO">
-                <div class="p-fluid grid">            
-                    <div class="field col-12 md:col-3" *ngFor="let item of cuentaPorCobrarDetallePay" (click)="setDescripcion(item.tipoCobro.id)">
-                        <label>{{item.tipoCobro.nombre}}</label>
-                        <div class="p-inputgroup">
-                            <span class="p-inputgroup-addon"><i class="pi {{item.icon}}"></i></span>
-                            <p-inputNumber [minFractionDigits]="2" [(ngModel)]="item.monto"></p-inputNumber>
-                        </div>
-                    </div>                    
-                </div>
-                <div class="example-container" *ngFor="let detalle of cuentaPorCobrarDetallePay; index as i">
-                    <ng-container *ngIf="objeto == i+1">
-                        <div class="p-fluid grid">
-                            <div class="field col-12 md:col-8">
-                                <label>Descripcion {{detalle.tipoCobro.nombre}}</label>
-                                <div class="p-inputgroup">
-                                    <span class="p-inputgroup-addon"><i class="pi {{detalle.icon}}"></i></span>
-                                    <input type="text" [(ngModel)]="detalle.descripcion" pInputText/>                    
-                                </div>
-                            </div>
-                        </div>
-                        <div class="p-fluid grid" *ngIf="objeto == 2 || objeto == 3 || objeto == 4">
-                            <div class="field col-12 md:col-8">
-                                <label>Banco</label>
-                                <p-dropdown  [options]="cuenta" [(ngModel)]="detalle.cuentaBancaria" placeholder="Seleccione un banco" optionLabel="nombre" [showClear]="true">
-                                    <ng-template let-item pTemplate="item">
-                                        <span>{{item.nombre}} {{item.numero}}</span>
-                                    </ng-template>
-                                    <ng-template let-item pTemplate="selectedItem">
-                                        <span>{{item.nombre}} {{item.numero}}</span>
-                                    </ng-template>
-                                </p-dropdown>
-                            </div>
-                            <div class="field col-12 md:col-4">
-                                <label>Documento {{detalle.tipoCobro.nombre}}</label>
-                                <div class="p-inputgroup">
-                                    <span class="p-inputgroup-addon"><i class="pi {{detalle.icon}}"></i></span>
-                                    <input type="text" [(ngModel)]="detalle.documento" pInputText/>                    
-                                </div>
-                            </div>
-                        </div>
-                    </ng-container>
-                </div>
-                </p-panel>
-
-        </div>
-    </ng-template>
-
-    <ng-template pTemplate="footer">
-        <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text" (click)="cerrar()"></button>
-        <button pButton pRipple label="Guardar" icon="pi pi-check" (click)="realizarPagos()" class="p-button-text"></button>
-    </ng-template>
-</p-dialog>
-
-
-
-
+<!-- VENTANA DE DETALLLE DE LOS PAGOS DE CREDITOS -->
 
 <p-dialog header="Pagos" [(visible)]="pagosDetailOpen" [modal]="true" [style]="{width: '50vw'}"
     [draggable]="false" [resizable]="false">
@@ -172,13 +99,13 @@
         <ng-template pTemplate="caption">
             <div class="flex">
                 <span class="p-input-icon-left ml-auto mr-2">
-                    <i class="pi pi-user"></i><input pInputText type="text" [(ngModel)]="cuentaPorCobrar.cliente" readonly/>
+                    <i class="pi pi-user"></i><input pInputText type="text" [value]="cuentaPorCobrar.cliente" readonly/>
                 </span>
                 <span class="p-input-icon-left ml-auto mr-2">
-                    <i class="pi pi-book"></i><input pInputText type="text" [(ngModel)]="cuentaPorCobrar.ventaid" readonly/>
+                    <i class="pi pi-book"></i><input pInputText type="text" [value]="cuentaPorCobrar.ventaid" readonly/>
                 </span>
                 <span class="p-input-icon-left ml-auto mr-2">
-                    <i class="pi pi-money-bill"></i><input pInputText type="text" [(ngModel)]="cuentaPorCobrar.total" readonly/>
+                    <i class="pi pi-money-bill"></i><input pInputText type="text" [value]="cuentaPorCobrar.total" readonly/>
                 </span>
             </div>
         </ng-template>
@@ -187,6 +114,7 @@
                 <th>Id</th>
                 <th>Fecha</th>
                 <th>Descripcion</th>
+                <th>Forma de Pago</th>
                 <th>Monto</th>
                 <th>Saldo</th>
             </tr>
@@ -196,6 +124,7 @@
                 <td>{{pago.id}}</td>
                 <td>{{pago.fecha | date:'short'}}</td>
                 <td>{{pago.descripcion}}</td>
+                <td>{{pago.tipoTransaccion?.nombre}}</td>
                 <td>{{pago.monto}}</td>
                 <td>{{pago.balance}}</td>
 
@@ -215,43 +144,3 @@
 
 
 
-<!-- <p-dialog [(visible)]="pagoDialogo"  header="Pago" [style]="{width: '700px'}" [modal]="true" styleClass="p-fluid" (onHide)="cerrar()">
-    <ng-template pTemplate="content">
-        
-        <div class="formgrid grid">
-            <div class="field col">
-                <label for="price">No. Factura</label>
-                <p-listbox [options]="cuentasPorCobrarSeleccionadas" optionLabel="ventaid" [style]="{'width':'15rem'}" [metaKeySelection]="false"></p-listbox>
-            </div>
-            <div class="field col">
-                <label for="price">Saldos</label>
-                <p-listbox [options]="cuentasPorCobrarSeleccionadas" optionLabel="saldo" [style]="{'width':'15rem'}" [metaKeySelection]="false">
-                    <ng-template let-credito pTemplate="item">
-                        <div class="country-item"> 
-                            <div>{{'Q ' + credito.saldo}}</div>
-                        </div>
-                    </ng-template>
-                </p-listbox>
-            </div>
-        </div>
-        <div class="formgrid grid">
-            <div class="field col">
-                <label for="price">Total Saldo</label>
-                <p-inputNumber id="price"  mode="currency" currency="GTQ" locale="es-GT" [readonly]="true" [(ngModel)]="monto" ></p-inputNumber>
-            </div>
-            <div class="field col">
-                <label for="quantity">Monto</label>
-                <p-inputNumber id="quantity" mode="currency" currency="GTQ" locale="es-GT" [(ngModel)]="parcial" [readonly]="pagoType"  ></p-inputNumber>
-            </div>
-        </div>
-        <div class="field">
-            <label for="description">Comentario</label>
-            <textarea id="description" pInputTextarea required rows="3" cols="20"></textarea>
-        </div>
-    </ng-template>
-
-    <ng-template pTemplate="footer">
-        <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text" (click)="cerrar()"></button>
-        <button pButton pRipple label="Guardar" icon="pi pi-check" [disabled]="parcial<=0" (click)="realizarPagos()" class="p-button-text"></button>
-    </ng-template>
-</p-dialog> -->
