--- a/src/app/components/dashboard/compras/creditos/cuenta-por-pagar/cuenta-por-pagar.component.html
+++ b/src/app/components/dashboard/compras/creditos/cuenta-por-pagar/cuenta-por-pagar.component.html
@@ -4,24 +4,28 @@
     <p-toolbar>
         <div class="p-toolbar-group-left">     
             <p-autoComplete  [(ngModel)]="selectProveedor" [suggestions]="proovedores" (completeMethod)="filterProovedores($event)" 
-            field="nombre" [dropdown]="true" [forceSelection]="true" (onSelect)="filterd()" class="mr-2">
+            field="nombre" [dropdown]="true" [forceSelection]="true" (onSelect)="filterd()" class="mr-2"
+            [disabled]="cuentaPorPagarService.form.get('dates')?.errors && cuentaPorPagarService.form.get('checked')?.value">
                 <ng-template let-proveedor pTemplate="item">
                 <div class="country-item">
                     <div>{{proveedor.nombre}}</div>
                 </div>
                 </ng-template>
             </p-autoComplete>
-            <div class="mr-2" *appRole="['ADMIN']">
-                <p-checkbox class="mr-2" [(ngModel)]="checked" [binary]="true" inputId="binary"></p-checkbox>
-                <label for="binary" class="mr-2">Cuentas canceladas</label>
+            <div [formGroup]="cuentaPorPagarService.form">
+                <div class="mr-2" *appRole="['ADMIN']">
+                    <p-checkbox class="mr-2" formControlName="checked" [binary]="true" inputId="binary" (onChange)="clean()"></p-checkbox>
+                    <label for="binary" class="mr-2">Cuentas canceladas</label>
+                </div>
+                <p-calendar formControlName="dates" selectionMode="range" [readonlyInput]="true" [showIcon]="true" class="mr-2" *ngIf="cuentaPorPagarService.form.get('checked')?.value"></p-calendar>
             </div>
-            <p-calendar [(ngModel)]="fechas" selectionMode="range" [readonlyInput]="true" [showIcon]="true" class="mr-2" *ngIf="checked"></p-calendar>        
         </div>
         
         <div class="p-toolbar-group-right">
-            <button pButton pRipple label="Todos" class="p-button-success mr-2" (click)="getTodosCuentasPorPagar()"></button> 
+            <button pButton pRipple label="Todos" class="p-button-success mr-2" [disabled]="cuentaPorPagarService.form.get('dates')?.errors && cuentaPorPagarService.form.get('checked')?.value"
+            (click)="getTodosCuentasPorPagar()"></button> 
             <button pButton pRipple label="Pago total" icon="pi pi-plus" class="p-button-success mr-2" (click)="pagoDialog()" 
-            [disabled]="!cuentasPorPagarSeleccionados || !cuentasPorPagarSeleccionados.length"></button>  
+            [disabled]="!cuentasPorPagarSeleccionados || !cuentasPorPagarSeleccionados.length || cuentaPorPagarService.form.get('checked')?.value"></button>  
         </div>
     </p-toolbar>
     <p-table #dt2 [value]="cuentasPorPagar" dataKey="id"
@@ -39,8 +43,8 @@
                 <th>Saldos</th>
                 <th>Fecha Limite</th>
                 <th>Estado</th>
-                <th>Pagos Parciales</th>
-                <th style="width: 3rem">
+                <th *ngIf="!cuentaPorPagarService.form.get('checked')?.value">Pagos Parciales</th>
+                <th style="width: 3rem" *ngIf="!cuentaPorPagarService.form.get('checked')?.value">
                     <p-tableHeaderCheckbox [disabled]="headerCheckbox"></p-tableHeaderCheckbox>
                 </th>
             </tr>
@@ -60,8 +64,8 @@
                 <td>
                     <i class="pi" [ngClass]="{'true-icon pi-check-circle': cuentaPorPagar.estado, 'false-icon pi-times-circle': !cuentaPorPagar.estado}"></i>
                 </td>            
-                <td><button pButton pRipple icon="pi pi-money-bill" class="p-button-rounded p-button-success mr-2" (click)="pagoDialog(cuentaPorPagar)" [disabled]="cuentaPorPagar.estado"></button></td>
-                <td>
+                <td *ngIf="!cuentaPorPagarService.form.get('checked')?.value"><button pButton pRipple icon="pi pi-money-bill" class="p-button-rounded p-button-success mr-2" (click)="openPagoForm(cuentaPorPagar)" [disabled]="cuentaPorPagar.estado"></button></td>
+                <td *ngIf="!cuentaPorPagarService.form.get('checked')?.value">
                     <p-tableCheckbox [value]="cuentaPorPagar" [disabled]="cuentaPorPagar.estado"></p-tableCheckbox>
                 </td>
             </tr>
@@ -82,7 +86,7 @@
 </div>
 
 
-<p-dialog [(visible)]="pagoDialogo"  header="Pago" [style]="{width: '650px'}" [modal]="true" styleClass="p-fluid" (onHide)="cerrar()">
+<!-- <p-dialog [(visible)]="pagoDialogo"  header="Pago" [style]="{width: '650px'}" [modal]="true" styleClass="p-fluid" (onHide)="cerrar()">
     <ng-template pTemplate="content">
         
         <div class="formgrid grid">
@@ -122,7 +126,7 @@
         <button pButton pRipple label="Guardar" icon="pi pi-check" [disabled]="parcial<=0" (click)="realizarPagos()" class="p-button-text"></button>
     </ng-template>
 </p-dialog>
-
+ -->
 
 
 
@@ -149,6 +153,7 @@
                 <th>Id</th>
                 <th>Fecha</th>
                 <th>Descripcion</th>
+                <th>Tipo Transaccion</th>
                 <th>Monto</th>
                 <th>Saldo</th>
             </tr>
@@ -158,6 +163,7 @@
                 <td>{{pago.id}}</td>
                 <td>{{pago.fecha | date: 'shortDate'}}</td>
                 <td>{{pago.descripcion}}</td>
+                <td>{{pago.tipoTransaccion?.nombre}}</td>
                 <td>{{pago.monto}}</td>
                 <td>{{pago.balance}}</td>
 
