--- a/src/app/components/dashboard/ventas/cliente/cliente-list/cliente-list.component.html
+++ b/src/app/components/dashboard/ventas/cliente/cliente-list/cliente-list.component.html
@@ -28,9 +28,9 @@
         </ng-container>
 
         <ng-container matColumnDef="telefono">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> <div *appConfigGlobal="['Telefono de clientes']">Telefono </div></th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Telefono </th>
             
-            <td mat-cell *matCellDef="let element">  <div *appConfigGlobal="['Telefono de clientes']">{{element.telefono}}</div></td>
+            <td mat-cell *matCellDef="let element"> {{element.telefono}} </td>
         </ng-container>
 
         <ng-container matColumnDef="nit">
