commit realizado por temas de actualizacion de version de primeNG

--- a/src/app/components/dashboard/almacen/precio/precio-list/precio-list.component.html
+++ b/src/app/components/dashboard/almacen/precio/precio-list/precio-list.component.html
@@ -126,7 +126,7 @@
                           </div>
                     </div>
                     <div class="mt-3">
-                      <button type="button" (click)="actualizarPrecios" class="btn btn-info mx-3" [disabled]="productoService.form.invalid">Modificar</button>
+                      <button type="button" (click)="actualizarPrecios()" class="btn btn-info mx-3" [disabled]="productoService.form.invalid">Modificar</button>
                   </div>
                 </form>
             </div>
