--- a/src/app/components/dashboard/ventas/cliente/cliente-form/cliente-form.component.html
+++ b/src/app/components/dashboard/ventas/cliente/cliente-form/cliente-form.component.html
@@ -88,7 +88,18 @@
                     <div class="mt-3">
                         <button type="button" (click)="service.edit ? actualizar() : agregar()" class="btn btn-info mx-3" [disabled]="service.form.invalid">{{service.titulo}}</button>
                     </div>
-                  </form>                   
+                  </form>         
+                  
+                                    
+                    <pre>
+                        Esado del forulario: {{service.form.valid}}
+                        <br>
+                        Status {{service.form.status}}
+                    </pre>
+
+                    <pre>
+                        {{service.form.value | json }}
+                    </pre>
             </div>
         </div>
     </div>
